--- a/Productos cerveza/estilos.css
+++ b/Productos cerveza/estilos.css
@@ -186,7 +186,7 @@ header {
     transform: translate3d(0, 0, 0);
     transition: all 600ms;
     animation: autoplay;
-    animation-duration: 6.5s;
+    animation-duration: 15s;
     animation-direction: alternate;
     animation-fill-mode: forwards;
     animation-iteration-count: infinite;
@@ -274,21 +274,54 @@ input[id="3"]:checked~.slide {
 input[id="3"]:checked~.pagination .pagination-item[for="3"] {
     background: #fff;
 }
+input[id="4"]:checked~.slide {
+    animation: none;
+    transform: translate3d(calc(-100% * 3), 0, 0);
+}
+
+input[id="4"]:checked~.pagination .pagination-item[for="4"] {
+    background: #fff;
+}
+input[id="5"]:checked~.slide {
+    animation: none;
+    transform: translate3d(calc(-100% * 4), 0, 0);
+}
+
+input[id="5"]:checked~.pagination .pagination-item[for="5"] {
+    background: #fff;
+}
+input[id="6"]:checked~.slide {
+    animation: none;
+    transform: translate3d(calc(-100% * 5), 0, 0);
+}
+
+input[id="6"]:checked~.pagination .pagination-item[for="6"] {
+    background: #fff;
+}
 
 @keyframes autoplay {
-    33% {
+    16.6% {
         transform: translate3d(calc(-100% * 0), 0, 0);
-
     }
 
-    66% {
+    33.2% {
         transform: translate3d(calc(-100% * 1), 0, 0);
+    }
 
+    49.8% {
+        transform: translate3d(calc(-100% * 2), 0, 0);
+    }
+
+    66.4% {
+        transform: translate3d(calc(-100% * 3), 0, 0);
+    }
+
+    83% {
+        transform: translate3d(calc(-100% * 4), 0, 0);
     }
 
     100% {
-        transform: translate3d(calc(-100% * 2), 0, 0);
-
+        transform: translate3d(calc(-100% * 5), 0, 0);
     }
 }
 
@@ -336,6 +369,8 @@ input[id="3"]:checked~.pagination .pagination-item[for="3"] {
 
 .listados {
     display: flex;
+    align-items: center;
+    justify-content: center;
     width: 25%;
     height: 70%;
 }
@@ -343,7 +378,6 @@ input[id="3"]:checked~.pagination .pagination-item[for="3"] {
 .lista {
     width: 50%;
     height: 40%;
-    margin: auto;
     text-align: center;
     font: italic normal bold 30px/67px Sitka Banner;
     letter-spacing: 0px;
