--- a/Entretenimiento/style.css
+++ b/Entretenimiento/style.css
@@ -182,7 +182,7 @@ img {
   transform: translate3d(0, 0, 0);
   transition: all 600ms;
   animation-name: autoplay;
-  animation-duration: 6.5s;
+  animation-duration: 12.5s;
   animation-direction: alternate;
   animation-fill-mode: forwards;
   animation-iteration-count: infinite;
@@ -265,21 +265,33 @@ input[id="3"]:checked~.slider {
   transform: translate3d(calc(-100% * 2), 0, 0);
 }
 
-input[id="3"]:checked~.pagina .item-pagina[for="3"] {
+input[id="3"]:checked~.pagina .item-pagina[for="4"] {
+  background: #ffffff;
+}
+input[id="4"]:checked~.slider {
+  animation: none;
+  transform: translate3d(calc(-100% * 2), 0, 0);
+}
+
+input[id="4"]:checked~.pagina .item-pagina[for="4"] {
   background: #ffffff;
 }
 
 @keyframes autoplay {
-  33% {
+  25% {
     transform: translate3d(calc(-100% * 0), 0, 0);
   }
 
-  66% {
+  50% {
     transform: translate3d(calc(-100% * 1), 0, 0);
   }
 
-  100% {
+  75% {
     transform: translate3d(calc(-100% * 2), 0, 0);
+  }
+
+  100% {
+    transform: translate3d(calc(-100% * 3), 0, 0);
   }
 }
 
